Cleanup some new PMD warnings from PMD 7.x (followup of r19101)
git-svn-id: https://josm.openstreetmap.de/svn/trunk@19106 0c6e7542-c601-0410-84e7-c038aed88b3b